footer: added eplicit height and width to rocket fixing janky rendering on mobile

--- a/src/styles/components/footer.css
+++ b/src/styles/components/footer.css
@@ -34,6 +34,7 @@
 
 .footer__chunk .rocket {
   width: 6rem;
+  height: 6rem;
   margin-top: -1.6rem;
   margin-left: -1.1rem;
 }
